--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    
+        <h1>Projects</h1>
+        <div>
+             <iframe src="https://erarootnew.github.io/project_1/"></iframe> 
+        </div>
     </body>
 </html>
