--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Projects List Page</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-        <h1>Projects</h1>
-        <div>
-             <iframe src="https://erarootnew.github.io/project_1/"></iframe> 
+
+<head>
+    <title>Projects List Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <!--header start-->
+    <header>
+        <div class="container">
+            <h1>Projects</h1>
         </div>
-    </body>
+    </header>
+    <!--header end-->
+
+    <!--section start-->
+    <section>
+        <div class="container">
+            <div class="boxes">
+                <div class="box">
+                    <iframe src="https://erarootnew.github.io/project_1/"></iframe>
+                    <div><a href="https://erarootnew.github.io/project_1/">project_1</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--section end-->
+
+    <!--footer start-->
+    <footer>
+
+    </footer>
+    <!--footer end-->
+
+</body>
+
 </html>
