--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                     <iframe src="https://erarootnew.github.io/project_1/"></iframe>
                     <div><a href="https://erarootnew.github.io/project_1/">project_1</a></div>
                 </div>
+                <div class="box">
+                    <iframe src="https://erarootnew.github.io/project_2/"></iframe>
+                    <div><a href="https://erarootnew.github.io/project_2/">project_2</a></div>
+                </div>
+                <div class="box">
+                    <iframe src="https://erarootnew.github.io/project_3/"></iframe>
+                    <div><a href="https://erarootnew.github.io/project_3/">project_3</a></div>
+                </div>
             </div>
         </div>
     </section>
@@ -33,7 +41,7 @@
 
     <!--footer start-->
     <footer>
-
+        <p>2017</p>
     </footer>
     <!--footer end-->
 
