--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <!--footer start-->
     <footer>
-        <p>2017</p>
+        <p>EraRootNew Projects, Copyright &copy; 2017</p>
     </footer>
     <!--footer end-->
 
